# k8s_ops

./: ARCHITECTURE.md  CHANGELOG.md  README.md  REQUIREMENTS.md  config.yaml.example  pyproject.toml
k8s_diagnose/: __init__.py  __main__.py  cli.py  config.py
k8s_diagnose/agent/: orchestrator.py  prompts.py  thought_chain.py  tools.py
k8s_diagnose/analyzers/: __init__.py  base.py  pod_analyzer.py  scheduler.py
k8s_diagnose/docs/: data_flow.md
k8s_diagnose/k8s_client/: __init__.py  kubectl.py  permissions.py
k8s_diagnose/knowledge/: __init__.py  error_patterns.py  retriever.py
knowledge/command-guides/: kubectl-basics.md
knowledge/error-patterns/: affinity-taint.md  crashloopbackoff.md  dns-resolution.md  evicted.md  faileddcheduling.md  imagepullbackoff-detailed.md  imagepullbackoff.md  init-container-failed.md  insufficient-resources.md  oomkilled.md  pod-network-unreachable.md  pvc-pv-issues.md  unhealthy.md  volcano-gpu-scheduling.md
knowledge/runbooks/: pod-diagnosis.md  troubleshooting-overview.md
tests/: conftest.py
tests/test_agent/: test_thought_chain.py  test_tools.py
tests/test_analyzers/: test_pod_analyzer.py  test_scheduler.py
tests/test_k8s_client/: test_kubectl.py  test_permissions.py
tests/test_knowledge/: test_error_patterns.py  test_retriever.py
